--- a/properties/src/panel/fields/fields-panel.component.html
+++ b/properties/src/panel/fields/fields-panel.component.html
@@ -11,18 +11,11 @@
         </div>
         <span *ngIf="field.isEditable" class="md-inputfield">
           <div class="ui-g-8">
-            <!-- <textarea [id]="field.name" rows="1" cols="25" pInputTextarea autoResize="autoResize" [(ngModel)]="field.value" [formControlName]="field.name">
-            </textarea> -->
-            <input [id]="field.name" [ngClass]="{'invalid' : !isValid(field), 'valid' : isValid(field)}" pInputText type="text" class="value"
-              [formControlName]="field.name" [(ngModel)]="field.value" />
+            <input [id]="field.name" pInputText type="text" class="value" [formControlName]="field.name" [(ngModel)]="field.value" />
           </div>
         </span>
       </div>
       <div class="ui-g" *ngSwitchCase="fieldUIType.BOOLEAN">
-
-        <!-- <div *ngIf="!(field.isEditable)" class="ui-g-8">
-          <p-checkbox [id]="field.name" [(ngModel)]="field.value" binary="true" [ngModelOptions]="{standalone: true}" disabled=true></p-checkbox>
-        </div> -->
         <div *ngIf="!(field.isEditable)" class="ui-g-8">
           <span [id]="field.name">{{field.value ? 'true' : 'false'}}</span>
         </div>
@@ -37,9 +30,8 @@
           </p-listbox>
         </div>
         <div *ngIf="field.isEditable" class="ui-g-8">
-          <p-listbox [id]="field.name" [style]="{'width':'250px'}" [options]="field.selectItems" [(ngModel)]="field.value" [formControlName]="field.name"
-            (onChange)=onUpdate()>
-          </p-listbox>
+          <p-dropdown [id]="field.name" [style]="{'width':'250px'}" [options]="field.selectItems" [(ngModel)]="field.value" [formControlName]="field.name"
+            (onChange)=onUpdate() placeholder="Select ..." showClear="false"></p-dropdown>
         </div>
       </div>
       <div class="ui-g" *ngSwitchCase="fieldUIType.RANGE">
