--- a/properties/src/panel/fields/fields-panel.component.html
+++ b/properties/src/panel/fields/fields-panel.component.html
@@ -4,45 +4,45 @@
       <div class="ui-g-4">
         <label [attr.for]="field.name">{{field.label}}</label>
       </div>
-      <div class="ui-g" *ngSwitchCase="fieldUIType.TEXT">
-
-        <div *ngIf="!(field.isEditable)" class="ui-g-8">
-          <span [id]="field.name">{{field.value}}</span>
-        </div>
-        <span *ngIf="field.isEditable" class="md-inputfield">
-          <div class="ui-g-8">
-            <input [id]="field.name" pInputText type="text" class="value" [formControlName]="field.name" [(ngModel)]="field.value" />
+      <div class="value-padding">
+        <div class="ui-g" *ngSwitchCase="fieldUIType.TEXT">
+          <div *ngIf="!(field.isEditable)" class="ui-g-8">
+            <span [id]="field.name">{{field.value}}</span>
           </div>
-        </span>
-      </div>
-      <div class="ui-g" *ngSwitchCase="fieldUIType.BOOLEAN">
-        <div *ngIf="!(field.isEditable)" class="ui-g-8">
-          <span [id]="field.name">{{field.value ? 'true' : 'false'}}</span>
+          <div *ngIf="field.isEditable" class="ui-g-8">
+            <span class="md-inputfield">
+              <input [id]="field.name" pInputText type="text" class="value ui-inputtext ui-corner-all ui-state-default ui-widget" [formControlName]="field.name"
+                [(ngModel)]="field.value" />
+            </span>
+          </div>
         </div>
-        <div *ngIf="field.isEditable" class="ui-g-8">
-          <p-checkbox [id]="field.name" [(ngModel)]="field.value" binary="true" [formControlName]="field.name" (onChange)=onUpdate()>
-          </p-checkbox>
+        <div class="ui-g" *ngSwitchCase="fieldUIType.BOOLEAN">
+          <div *ngIf="!(field.isEditable)" class="ui-g-8">
+            <span [id]="field.name">{{field.value ? 'true' : 'false'}}</span>
+          </div>
+          <div *ngIf="field.isEditable" class="ui-g-8">
+            <p-checkbox [id]="field.name" [(ngModel)]="field.value" binary="true" [formControlName]="field.name" (onChange)=onUpdate()>
+            </p-checkbox>
+          </div>
         </div>
-      </div>
-      <div class="ui-g" *ngSwitchCase="fieldUIType.LIST">
-        <div *ngIf="!(field.isEditable)" class="ui-g-8">
-          <p-listbox [id]="field.label" [style]="{'width':'250px'}" [options]="field.selectItems" readonly="true">
-          </p-listbox>
+        <div class="ui-g" *ngSwitchCase="fieldUIType.LIST">
+          <div *ngIf="!(field.isEditable)" class="ui-g-8">
+            <span [id]="field.name">{{field.value}}</span>
+          </div>
+          <div *ngIf="field.isEditable" class="ui-g-8">
+            <p-dropdown [id]="field.name" [style]="{'width':'250px'}" [options]="field.selectItems" [(ngModel)]="field.value" [formControlName]="field.name"
+              (onChange)=onUpdate() placeholder="Select ..." showClear="false"></p-dropdown>
+          </div>
         </div>
-        <div *ngIf="field.isEditable" class="ui-g-8">
-          <p-dropdown [id]="field.name" [style]="{'width':'250px'}" [options]="field.selectItems" [(ngModel)]="field.value" [formControlName]="field.name"
-            (onChange)=onUpdate() placeholder="Select ..." showClear="false"></p-dropdown>
-        </div>
-      </div>
-      <div class="ui-g" *ngSwitchCase="fieldUIType.RANGE">
-        <div *ngIf="!(field.isEditable)" class="ui-g-8">
-          <span [id]="field.name">{{field.value}}</span>
-        </div>
-        <div *ngIf="field.isEditable" class="ui-g-8">
-          <!-- <p align="center">{{field.possibleValues[0].value + ' - ' + field.possibleValues[field.possibleValues.length - 1].value }}</p> -->
-          <p-slider [id]="field.name" [(ngModel)]="field.valueIndex" [style]="{'width':'250px'}" (onChange)="onRangeUpdate($event, field)"
-            [step]="1" [min]="0" [max]="field.possibleValues.length - 1" [formControlName]="field.name"></p-slider>
-          <p align="center">{{field.possibleValues[field.valueIndex].value}}</p>
+        <div class="ui-g" *ngSwitchCase="fieldUIType.RANGE">
+          <div *ngIf="!(field.isEditable)" class="ui-g-8">
+            <span [id]="field.name">{{field.value}}</span>
+          </div>
+          <div *ngIf="field.isEditable" class="ui-g-8">
+            <p-slider [id]="field.name" [(ngModel)]="field.valueIndex" [style]="{'width':'250px'}" (onChange)="onRangeUpdate($event, field)"
+              [step]="1" [min]="0" [max]="field.possibleValues.length - 1" [formControlName]="field.name" [animate]="true"></p-slider>
+            <p align="center">{{field.possibleValues[field.valueIndex].value}}</p>
+          </div>
         </div>
       </div>
     </div>
