--- a/properties/src/panel/fields/fields-panel.component.scss
+++ b/properties/src/panel/fields/fields-panel.component.scss
@@ -2,14 +2,14 @@
   width: 250px;
 }
 
+.value-padding {
+  padding: 5px;
+}
+
 .ng-invalid {
   border-color: red;
 }
 
 .ng-valid {
   border-color: black;
-}
-
-.ui-dropdown .ui-dropdown-clear-icon {
-  display: none;
 }
