--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,10 +25,16 @@
       </div>
       <div *ngSwitchCase="'Item List'">
         <h2>Multiple Field Group Items</h2>
-        <app-item-list-panel fxLayout="column" [itemConf]="sampleItemConf" [finaliseLabel]="'Submit'"></app-item-list-panel>
+        <app-item-list-panel fxLayout="column" [itemConf]="listItemConf" [finaliseLabel]="'Submit'"></app-item-list-panel>
+      </div>
+      <div *ngSwitchCase="'Dialogs'">
+        <p-button label="Open Item List Dialog" (onClick)="openListDialog()"></p-button>
       </div>
     </div>
   </p-tabPanel>
 </p-tabView>
 
 <p-growl></p-growl>
+
+<app-item-list-dialog [dialogItemConf]="dialogListItemConf" [finaliseLabel]="'Submit'" [dialogHeader]="'Item List Dialog'"
+  [isVisible]="dialogListItemConf.isItemListDialogVisible"></app-item-list-dialog>
