--- a/properties/src/panel/fields/fields-panel.component.html
+++ b/properties/src/panel/fields/fields-panel.component.html
@@ -1,10 +1,10 @@
 <div>
   <form [formGroup]="fieldGroup.form">
-    <div *ngFor="let field of fields" [ngSwitch]="field.fieldUIType()">
+    <div *ngFor="let field of fields" [ngSwitch]="field.fieldUIType()" class="value-padding">
       <div class="ui-g-4">
         <label [attr.for]="field.name">{{field.label}}</label>
       </div>
-      <div class="value-padding">
+      <div>
         <div class="ui-g" *ngSwitchCase="fieldUIType.TEXT">
           <div *ngIf="!(field.isEditable)" class="ui-g-8">
             <span [id]="field.name">{{field.value}}</span>
@@ -39,9 +39,11 @@
             <span [id]="field.name">{{field.value}}</span>
           </div>
           <div *ngIf="field.isEditable" class="ui-g-8">
-            <p-slider [id]="field.name" [(ngModel)]="field.valueIndex" [style]="{'width':'250px'}" (onChange)="onRangeUpdate($event, field)"
-              [step]="1" [min]="0" [max]="field.possibleValues.length - 1" [formControlName]="field.name" [animate]="true"></p-slider>
-            <p align="center">{{field.possibleValues[field.valueIndex].value}}</p>
+            <mat-slider [id]="field.name" [(ngModel)]="field.valueIndex" class="value" (change)="onRangeUpdate($event, field)" [step]="1"
+              [min]="0" [max]="field.possibleValues.length - 1" [tick-interval]="1" [formControlName]="field.name"></mat-slider>
+            <div class="value">
+              <span>{{field.possibleValues[field.valueIndex].value}}</span>
+            </div>
           </div>
         </div>
       </div>
