--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 
 @import "./assets/theme/theme-dark-green.css";
 @import "./assets/layout/css/layout-dark-green.css";
+@import "~@angular/material/prebuilt-themes/purple-green.css";
 
 html,
 body {
@@ -29,5 +30,14 @@ body {
 }
 
 .ui-widget-content {
+  border: none !important;
+}
+
+.mat-slider-track-background {
+  background-color: gray !important;
+}
+
+.mat-slider-thumb {
+  background-color: darkgreen !important;
   border: none !important;
 }
