AL-334 : Fix properties panel min height

--- a/properties/src/panel/item-list/item-list-panel.component.html
+++ b/properties/src/panel/item-list/item-list-panel.component.html
@@ -1,11 +1,11 @@
 <div fxLayout="row" fxLayoutGap="15px">
   <div *ngIf="!itemConf.showFirstItemOnly" fxFlex="0 1 33%">
     <p-listbox class="item-list" [options]="items" [(ngModel)]="selectedItemValue" (onChange)="select($event.value.id)" filter="filter"
-      [style]="{'width': '100%'}" [listStyle]="{'max-height': '400px'}">
+      [style]="{'width': '100%'}" [listStyle]="{'min-height': '300px', 'max-height': '300px'}">
     </p-listbox>
   </div>
   <div *ngIf="itemConf.isSelected()" fxFlex="0 1 66%">
-    <p-tabView [style]="{'height': '440px'}">
+    <p-tabView [style]="{'height': '340px'}">
       <p-tabPanel *ngFor="let fieldGroup of itemConf.selectedItemFieldGroups()" [header]="fieldGroup.label" [selected]="fieldGroup.active">
         <app-fields-panel [fieldGroup]="fieldGroup"></app-fields-panel>
       </p-tabPanel>
