--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,15 @@ body {
   display: none;
 }
 
+.ui-tabview,
+.ui-tabview-panel {
+  height: 100% !important;
+}
+
+.ui-tabview-panels {
+  height: calc(100% - 43px) !important;
+}
+
 .dialog-container .ui-dialog {
   width: 55% !important;
   height: 70% !important;
