Move field panel to single column with floating labels

--- a/modules/properties/src/panel/fields/fields-panel.component.html
+++ b/modules/properties/src/panel/fields/fields-panel.component.html
@@ -1,52 +1,72 @@
 <div>
   <form [formGroup]="fieldGroup.form">
-    <div *ngFor="let field of fields" [ngSwitch]="field.fieldUIType()" class="value-padding">
-      <div class="ui-g-4">
-        <label [attr.for]="field.name">{{field.label}}</label>
+    <div *ngFor="let field of fields" [ngSwitch]="field.fieldUIType()" class="field">
+
+      <div *ngSwitchCase="fieldUIType.TEXT">
+        <div *ngIf="!(field.isEditable)">
+          <span class="ui-float-label">
+            <input [id]="field.name" pInputText type="text" class="value readonly ui-inputtext ui-state-filled" [(ngModel)]="field.value"
+              [ngModelOptions]="{standalone: true}" disabled=true />
+            <label>{{ field.name }}</label>
+          </span>
+        </div>
+        <div *ngIf="field.isEditable">
+          <span class="ui-float-label">
+            <input [id]="field.name" pInputText type="text" class="value ui-inputtext ui-state-filled" [formControlName]="field.name"
+              [(ngModel)]="field.value" />
+            <label>{{ field.name }}</label>
+          </span>
+        </div>
       </div>
-      <div>
-        <div class="ui-g" *ngSwitchCase="fieldUIType.TEXT">
-          <div *ngIf="!(field.isEditable)" class="ui-g-8">
-            <span [id]="field.name">{{field.value}}</span>
-          </div>
-          <div *ngIf="field.isEditable" class="ui-g-8">
-            <span class="md-inputfield">
-              <input [id]="field.name" pInputText type="text" class="value ui-inputtext ui-corner-all ui-state-default ui-widget" [formControlName]="field.name"
-                [(ngModel)]="field.value" />
-            </span>
-          </div>
+      <div *ngSwitchCase="fieldUIType.BOOLEAN">
+        <div *ngIf="!(field.isEditable)">
+          <p-checkbox [id]="field.name" [(ngModel)]="field.value" binary="true" [label]="field.name" [ngModelOptions]="{standalone: true}"
+            disabled=true>
+          </p-checkbox>
         </div>
-        <div class="ui-g" *ngSwitchCase="fieldUIType.BOOLEAN">
-          <div *ngIf="!(field.isEditable)" class="ui-g-8">
-            <span [id]="field.name">{{field.value ? 'true' : 'false'}}</span>
-          </div>
-          <div *ngIf="field.isEditable" class="ui-g-8">
-            <p-checkbox [id]="field.name" [(ngModel)]="field.value" binary="true" [formControlName]="field.name" (onChange)=onUpdate()>
-            </p-checkbox>
-          </div>
+        <div *ngIf="field.isEditable">
+          <p-checkbox [id]="field.name" [(ngModel)]="field.value" binary="true" [formControlName]="field.name" [label]="field.name"
+            (onChange)=onUpdate()>
+          </p-checkbox>
         </div>
-        <div class="ui-g" *ngSwitchCase="fieldUIType.LIST">
-          <div *ngIf="!(field.isEditable)" class="ui-g-8">
-            <span [id]="field.name">{{field.value}}</span>
-          </div>
-          <div *ngIf="field.isEditable" class="ui-g-8">
+      </div>
+      <div *ngSwitchCase="fieldUIType.LIST">
+        <div *ngIf="!(field.isEditable)">
+          <span class="ui-float-label">
+            <input [id]="field.name" pInputText type="text" class="value readonly ui-inputtext ui-state-filled" [(ngModel)]="field.value"
+              [ngModelOptions]="{standalone: true}" disabled=true />
+            <label>{{ field.name }}</label>
+          </span>
+        </div>
+        <div *ngIf="field.isEditable">
+          <span class="ui-float-label">
             <p-dropdown [id]="field.name" [style]="{'width':'250px'}" [options]="field.selectItems" [(ngModel)]="field.value" [formControlName]="field.name"
               (onChange)=onUpdate() placeholder="Select ..." showClear="false"></p-dropdown>
-          </div>
+            <label>{{ field.name }}</label>
+          </span>
         </div>
-        <div class="ui-g" *ngSwitchCase="fieldUIType.RANGE">
-          <div *ngIf="!(field.isEditable)" class="ui-g-8">
-            <span [id]="field.name">{{field.value}}</span>
-          </div>
-          <div *ngIf="field.isEditable" class="ui-g-8">
-            <mat-slider [id]="field.name" [(ngModel)]="field.valueIndex" class="value" (change)="onRangeUpdate($event, field)" [step]="1"
-              [min]="0" [max]="field.possibleValues.length - 1" [tick-interval]="1" [formControlName]="field.name"></mat-slider>
-            <div class="value">
-              <span>{{field.possibleValues[field.valueIndex].value}}</span>
-            </div>
-          </div>
+
+      </div>
+      <div *ngSwitchCase="fieldUIType.RANGE">
+        <div *ngIf="!(field.isEditable)">
+          <span class="ui-float-label">
+            <input [id]="field.name" pInputText type="text" class="value readonly ui-inputtext ui-state-filled" [(ngModel)]="field.value"
+              [ngModelOptions]="{standalone: true}" disabled=true />
+            <label>{{ field.name }}</label>
+          </span>
+        </div>
+        <div *ngIf="field.isEditable">
+          <span class="ui-float-label">
+            <input [id]="field.name" pInputText type="text" class="value readonly center ui-inputtext ui-state-filled" [(ngModel)]="field.possibleValues[field.valueIndex].value"
+              [ngModelOptions]="{standalone: true}" disabled=true />
+            <label>{{ field.name }}</label>
+          </span>
+          <mat-slider [id]="field.name" [(ngModel)]="field.valueIndex" class="value" (change)="onRangeUpdate($event, field)" [step]="1"
+            [min]="0" [max]="field.possibleValues.length - 1" [tick-interval]="1" [formControlName]="field.name">
+          </mat-slider>
         </div>
       </div>
+
     </div>
   </form>
 </div>
