--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <ul>
   <li>
-    <button md-button class="router-link" [routerLink]="['/properties']">properties</button>
+    <p-button label="Properties" class="router-link" [routerLink]="['/properties']"></p-button>
   </li>
 </ul>
 
