Fix form field disabled status, Correct fields labels

--- a/modules/properties/src/panel/fields/fields-panel.component.html
+++ b/modules/properties/src/panel/fields/fields-panel.component.html
@@ -7,24 +7,24 @@
           <span class="ui-float-label">
             <input [id]="field.name" pInputText type="text" class="value readonly ui-inputtext ui-state-filled" [formControlName]="field.name"
               [(ngModel)]="field.value" />
-            <label>{{ field.name }}</label>
+            <label>{{ field.label }}</label>
           </span>
         </div>
         <div *ngIf="field.isEditable">
           <span class="ui-float-label">
             <input [id]="field.name" pInputText type="text" class="value ui-inputtext ui-state-filled" [formControlName]="field.name"
               [(ngModel)]="field.value" />
-            <label>{{ field.name }}</label>
+            <label>{{ field.label }}</label>
           </span>
         </div>
       </div>
       <div *ngSwitchCase="fieldUIType.BOOLEAN">
         <div *ngIf="!(field.isEditable)">
-          <p-checkbox [id]="field.name" [(ngModel)]="field.value" binary="true" [formControlName]="field.name" [label]="field.name">
+          <p-checkbox [id]="field.name" [(ngModel)]="field.value" binary="true" [formControlName]="field.name" [label]="field.label">
           </p-checkbox>
         </div>
         <div *ngIf="field.isEditable">
-          <p-checkbox [id]="field.name" [(ngModel)]="field.value" binary="true" [formControlName]="field.name" [label]="field.name"
+          <p-checkbox [id]="field.name" [(ngModel)]="field.value" binary="true" [formControlName]="field.name" [label]="field.label"
             (onChange)=onUpdate()>
           </p-checkbox>
         </div>
@@ -34,14 +34,14 @@
           <span class="ui-float-label">
             <input [id]="field.name" pInputText type="text" class="value readonly ui-inputtext ui-state-filled" [(ngModel)]="field.value"
               [formControlName]="field.name" />
-            <label>{{ field.name }}</label>
+            <label>{{ field.label }}</label>
           </span>
         </div>
         <div *ngIf="field.isEditable">
           <span class="ui-float-label">
             <p-dropdown [id]="field.name" [style]="{'width':'250px'}" [options]="field.selectItems" [(ngModel)]="field.value" [formControlName]="field.name"
               (onChange)=onUpdate() placeholder="Select ..." showClear="false"></p-dropdown>
-            <label>{{ field.name }}</label>
+            <label>{{ field.label }}</label>
           </span>
         </div>
 
@@ -51,14 +51,14 @@
           <span class="ui-float-label">
             <input [id]="field.name" pInputText type="text" class="value readonly ui-inputtext ui-state-filled" [(ngModel)]="field.value"
               [formControlName]="field.name" />
-            <label>{{ field.name }}</label>
+            <label>{{ field.label }}</label>
           </span>
         </div>
         <div *ngIf="field.isEditable">
           <span class="ui-float-label">
             <input [id]="field.name" pInputText type="text" class="value readonly center ui-inputtext ui-state-filled" [(ngModel)]="field.possibleValues[field.valueIndex].value"
               [ngModelOptions]="{standalone: true}" />
-            <label>{{ field.name }}</label>
+            <label>{{ field.label }}</label>
           </span>
           <mat-slider [id]="field.name" [(ngModel)]="field.valueIndex" class="value" (change)="onRangeUpdate($event, field)" [step]="1"
             [min]="0" [max]="field.possibleValues.length - 1" [tick-interval]="1" [formControlName]="field.name">
