--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,3 +55,9 @@ body {
 .ui-inputtext:disabled {
   border: none !important;
 }
+
+.ui-float-label > p-checkbox:focus ~ label,
+.ui-float-label > p-checkbox.ui-state-filled ~ label {
+  top: -0.75em;
+  font-size: 12px;
+}
