--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,3 +61,9 @@ body {
   top: -0.75em;
   font-size: 12px;
 }
+
+.ui-float-label .ui-dropdown,
+.ui-float-label .value,
+mat-slider.value {
+  width: 200px !important;
+}
