--- a/src/app/properties/properties.component.html
+++ b/src/app/properties/properties.component.html
@@ -45,7 +45,7 @@
 <p-growl></p-growl>
 
 <app-item-list-dialog [dialogItemConf]="dialogListItemConf" [finaliseLabel]="'Submit'" [dialogHeader]="'Item List Dialog'"
-  [isVisible]="dialogListItemConf.isItemListDialogVisible"></app-item-list-dialog>
+  [isVisible]="dialogListItemConf.isItemListDialogVisible" [dynamicItem]="dynamicItem"></app-item-list-dialog>
 
 <app-item-list-dialog [dialogItemConf]="dialogSingleItemConf" [finaliseLabel]="'Submit'" [dialogHeader]="'Single Item Dialog'"
   [isVisible]="dialogSingleItemConf.isSingleItemDialogVisible"></app-item-list-dialog>
