--- a/modules/properties/src/dialog/item-list/item-list-dialog.component.html
+++ b/modules/properties/src/dialog/item-list/item-list-dialog.component.html
@@ -1,5 +1,5 @@
 <p-dialog *ngIf="isVisible" [(visible)]="isVisible" class="dialog-container" [header]="dialogHeader" modal="modal" [closable]="false"
   [responsive]="true">
   <input [style.display]="'none'" />
-  <app-item-list-panel class="dialog-panel" [itemConf]="dialogItemConf" [finaliseLabel]="finaliseLabel"></app-item-list-panel>
+  <app-item-list-panel class="dialog-panel" [itemConf]="dialogItemConf" [finaliseLabel]="finaliseLabel" [dynamicItem]="dynamicItem"></app-item-list-panel>
 </p-dialog>
